--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,11 @@
+2024-02-27 Version: 1.0.2
+- Update API GetPfsSqlSample: update param EndTime.
+- Update API GetPfsSqlSample: update param InstanceId.
+- Update API GetPfsSqlSample: update param StartTime.
+- Update API ModifyAutoScalingConfig: update param Bandwidth.
+- Update API ModifyAutoScalingConfig: update response param.
+
+
 2024-02-21 Version: 1.0.1
 - Generated cpp 2020-01-16 for DAS.
 
