--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,7 @@
+2025-07-22 Version: 1.4.4
+- Update API GetDasSQLLogHotData: add response parameters Body.Data.List.$.NodeId.
+
+
 2025-06-25 Version: 1.4.3
 - Generated cpp 2020-01-16 for DAS.
 
