--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,7 @@
+2026-01-15 Version: 1.8.3
+- Update API GetInstanceGroupInspectReportDetail: add request parameters AgentId.
+
+
 2026-01-06 Version: 1.8.2
 - Generated cpp 2020-01-16 for DAS.
 
